--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -62,3 +62,8 @@ input[type=text], input[type=password] {
     background: rgb(116, 184, 159);
 }
 
+.d-flex {
+    display: flex;
+    justify-content: center;
+}
+
