--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -1,4 +1,3 @@
-
 .justify-content-center {
 	justify-content: center;
 	align-items: center;
@@ -77,7 +76,16 @@ input[type="password"] {
 	align-items: center;
 }
 .item-backup .count {
-	font-size: 50px;
+	font-size: 40px;
+	line-height: 43px;
+}
+.item-backup .percentage {
+	border-bottom: 1px solid #eee;
+}
+
+.item-backup .list {
+	font-size: 10px;
+	margin-top: 8px;
 }
 
 #logout_button {
