--- a/assets/bootstrap/css/style.css
+++ b/assets/bootstrap/css/style.css
@@ -16,7 +16,7 @@ footer img {
 
 footer div.col-lg-4 {
 	text-align: right;
-	position: fixed;
+	position: relative !important;
 	padding-bottom: 10px;
 	margin-bottom: 80px;
 	border-bottom: 1px solid grey;
@@ -31,9 +31,6 @@ footer div.col-lg-4 {
 ----------------------------------------------------- */
 
 #container {
-	width: 30%;
-	margin: 0 auto;
-	margin-top: 9%;
 }
 
 #login_form {
@@ -41,7 +38,6 @@ footer div.col-lg-4 {
 	padding: 30px;
 	border: 1px solid #f1f1f1;
 	background: #fff;
-	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 input[type="text"],
